--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,14 @@
             "request": "launch",
             "program": "present.py",
             "console": "integratedTerminal",
-            "args": ["-w","/tmp/a"]
+            "args": [
+                "-w",
+                "/home/mr/Dokumente/Projekte/r3auslage_monitor/webpages",
+                "-p",
+                "/home/mr/Dokumente/R3/R3BILDER",
+                "--viewer",
+                "mpv"
+            ]
         },
         {
             "name": "Python Debugger: Current File",
